--- a/src/app/components/amount-input/amount-input.component.html
+++ b/src/app/components/amount-input/amount-input.component.html
@@ -1,1 +1,1 @@
-<input [disabled]="disabled" type="tel" nbInput fullWidth placeholder="Enter Amount here" (keyup)="avalidate($event)" [(ngModel)]="innerValue" name="amount" id="amount" #amount="ngModel" required >
+<input [disabled]="disabled" type="text" nbInput fullWidth placeholder="Enter Amount here" (keyup)="avalidate($event)" [(ngModel)]="innerValue" name="amount" id="amount" required >
