--- a/src/app/modules/disbursement/budget/setup/setup.component.html
+++ b/src/app/modules/disbursement/budget/setup/setup.component.html
@@ -9,23 +9,36 @@
   <h6>Set up your overall budget</h6>
       <div class="form-group row">
         <div class="col-sm-8">
-          <label>Financial Year</label>
-        <ngx-date-range [(start)]="budget.financialYearStartDate" [(end)]="budget.financialYearEndDate" required></ngx-date-range>
-        </div>
+          <h6>Financial Year</h6>
+        <!-- <ngx-date-range [(start)]="budget.financialYearStartDate" [(end)]="budget.financialYearEndDate" ></ngx-date-range> -->
+        <div style="display: flex;">
+          <div>
+            <label>Start Date</label>
+            <ngx-date [(value)]="budget.financialYearStartDate" [max]='budget.financialYearEndDate'  style="width: 40%;"></ngx-date>
+          </div>
+          <div style="margin-left: 20px; margin-right: 20px; font-size: 20px; text-align: center; justify-content: center; display: flex;"></div>
+          <div>
+            <label>End Date</label>
+            <ngx-date  [(value)]="budget.financialYearEndDate" [min]='budget.financialYearStartDate'  style="width: 40%;"></ngx-date>
+          </div>
+      </div>
+      </div>
       </div>
 
       <div class="form-group row">
        <div class="col-sm-7">
         <label>Total amount</label>
+        <!-- <input type="number" name="amount" class="form-" #amount="ngModel" [(ngModel)]="budegt.totalBudgetAmount" required> -->
         <app-amount-input [(value)]="budget.totalBudgetAmount" required></app-amount-input>
-       </div>
+      </div>
       </div>
 
       <div class="form-group row">
         <div class="col-sm-8">
           <label></label>
-        <button nbButton status="primary" (click)="addBudget()" [disabled]="!disableSubmitbtn">Save and Continue</button>
-        </div>
+        <button *ngIf="!btnProcessing"  nbButton status="primary" (click)="addBudget()" [disabled]="!disableSubmitbtn">Save and Continue</button>
+        <button *ngIf="btnProcessing" nbButton status="primary">Processing... &nbsp; <i class="fa fa-spin fa-spinner"></i></button>
+      </div>
       </div>
 
  </form>
