--- a/src/app/modules/disbursement/disbursement/create-disbursement/create-disbursement.component.html
+++ b/src/app/modules/disbursement/disbursement/create-disbursement/create-disbursement.component.html
@@ -331,7 +331,8 @@
               </div>
               <div class="col-sm-6 col-md-6 col-lg-6">
                 <button type="submit" (click)="cancelSubmission()" nbButton status="primary" outline>Cancel</button>
-                <button nbButton status="primary" (click)="createDisbursement()">Submit</button>
+                <button *ngIf="!btnProcessing" nbButton status="primary" (click)="createDisbursement()">Submit</button>
+                <button *ngIf="btnProcessing" nbButton status="primary">Processing... &nbsp; <i class="fa fa-spin fa-spinner"></i></button>
               </div>
             </div>
             <!-- <div class="form-group row">
