--- a/src/app/modules/loan/loan-type/loan-type.component.html
+++ b/src/app/modules/loan/loan-type/loan-type.component.html
@@ -181,7 +181,8 @@
 
               <div class="form-group row">
                  <div class="col-sm-6" style="display: flex; flex-direction: row; justify-content: space-between;">
-                  <button type="submit" class="btn my-button" (click)="createLoanType()" [disabled]="!loanType.valid" nbButton status="primary">Submit</button>
+                  <button *ngIf="!loading" type="submit" class="btn my-button" (click)="createLoanType()" [disabled]="!loanType.valid" nbButton status="primary">Submit</button>
+                  <button *ngIf="loading" nbButton status="primary">Processing... &nbsp; <i class="fa fa-spin fa-spinner"></i></button>
                   <span style="padding: 8px;"></span>
                   <button type="submit" class="btn cancel-button" nbButton status="primary" outline>Cancel</button>
                 </div>
