--- a/src/app/modules/loan/loan-type/loan-type.component.html
+++ b/src/app/modules/loan/loan-type/loan-type.component.html
@@ -192,4 +192,184 @@
   </div>
 </ngx-side-modal>
 
+<ngx-side-modal [(show)]='updateLoan' style="width: 500px;">
+  <div modal-header>Update Loan Type</div>
+  <div modal-body>
+    <nb-card>
+            <nb-card-body>
+              <form #loanType="ngForm" name="loanType">
+              <div class="form-group row">
+                <div class="col">
+                  <label for="">Type Name</label>
+                  <input type="text" class="form-control" name="typeName" #typeName="ngModel"
+                  [(ngModel)]="updateLoanData.name" placeholder="Enter Name" required>
+                  <div *ngIf="typeName.invalid && (typeName.dirty || typeName.touched)" class="error">
+                    <div *ngIf="typeName.errors.required">Type Name is required</div>
+                  </div>
+                </div>
+              </div>
+
+              <div class="form-group row">
+                <div class="col">
+                  <label for="">Type Code</label>
+                  <input type="text" class="form-control" name="typeCode" #typeCode="ngModel"
+                  [(ngModel)]="updateLoanData.code" placeholder="Enter Code" required>
+                  <div *ngIf="typeCode.invalid && (typeCode.dirty || typeCode.touched)" class="error">
+                    <div *ngIf="typeCode.errors.required">Type Code is required</div>
+                  </div>
+                </div>
+              </div>
+
+              <div class="form-group row">
+                <div class="col-sm-9">
+                  <label for="">Requires Guarantor? </label>
+                </div>
+
+                <div class="col-sm-3">
+                  <nb-checkbox status="basic" name="isGuarantorRequired" #isGuarantorRequired="ngModel"
+                  [(ngModel)]="updateLoanData.requiresGuarantor" (checkedChange)="toggleGuarantor($event)"></nb-checkbox>
+                </div>
+              </div>
+
+              <div *ngIf="isGuarantor == true" class="form-group row">
+                <div class="col">
+                  <label for="">Required Number of Guarantor </label>
+                  <input type="number" class="form-control" name="guarantorNo" #guarantorNo="ngModel"
+                  [(ngModel)]="updateLoanData.requiredNoOfGuarantors" placeholder="Required Number">
+                  <div *ngIf="guarantorNo.invalid && (guarantorNo.dirty || guarantorNo.touched)" class="error">
+                    <div *ngIf="guarantorNo.errors.required">Number of guarantor is required</div>
+                  </div>
+                </div>
+              </div>
+
+              <div class="form-group row">
+                <div class="col">
+                  <label for="">Ledger Number</label>
+                  <input type="text" class="form-control" name="ledgerNo" #ledgerNo="ngModel"
+                  [(ngModel)]="updateLoanData.ledgerNo" placeholder="Enter Ledger Number">
+                  <div *ngIf="ledgerNo.invalid && (ledgerNo.dirty || ledgerNo.touched)" class="error">
+                    <div *ngIf="ledgerNo.errors.required">Ledger Number is required</div>
+                  </div>
+                </div>
+              </div>
+
+              <div class="form-group row">
+                <div class="col">
+                  <label for="">Eligible Employees</label>
+                  <select [(ngModel)]="updateLoanData.eligibleEmploymentStatus" #eligibleEmploymentStatus="ngModel" class="form-control" name="eligibleEmploymentStatus">
+                    <option value="">--Select all Eligible Employees--</option>
+                    <option *ngFor="let status of eligibilityStatus" [value]="status.id">{{ status.text }}</option>
+                  </select>
+                  <div *ngIf="eligibleEmploymentStatus.invalid && (eligibleEmploymentStatus.dirty || eligibleEmploymentStatus.touched)" class="error">
+                    <div *ngIf="eligibleEmploymentStatus.errors.required">Eligible Employee is required</div>
+                  </div>
+
+                </div>
+              </div>
+
+              <div class="form-group row">
+                <div class="col">
+                  <label for="">Eligible Grades</label>
+                  <nb-radio-group name="eligibleGrades" #eligibleGrades="ngModel" [(ngModel)]="option" (valueChange)="loanEligibility($event)">
+                    <nb-radio *ngFor="let option of options"
+                    [value]="option.value">
+                    {{ option.label }} </nb-radio>
+                  </nb-radio-group>
+                </div>
+              </div>
+
+              <div *ngIf="option ==='selected'" class="form-group row">
+                <div class="col">
+                  <label for="">Selected Grades</label>
+                  <nb-select multiple [(ngModel)]="allGrades" name="allGrades"  placeholder="Select all Eligible Grades">
+                    <nb-option [value]="">--Select Grades-- </nb-option>
+                    <nb-option *ngFor="let grade of allGrades" [value]="grade.id">{{ grade.name }}</nb-option>
+                  </nb-select>
+                </div>
+              </div>
+
+
+              <div class="form-group row">
+                <div class="col">
+                  <label for="">Min Tenor (Months)</label>
+                  <input class="form-control" type="number" name="minTtenor" #minTtenor="ngModel"
+                  [(ngModel)]="updateLoanData.minTenor" placeholder="Minimum Tenor" required>
+                  <div *ngIf="minTtenor.invalid && (minTtenor.dirty || minTtenor.touched)" class="error">
+                    <div *ngIf="minTtenor.errors.required">Minimum Tenor is required</div>
+                  </div>
+                </div>
+              </div>
+
+              <div class="form-group row">
+                <div class="col">
+                  <label for="">Max Tenor (Months)</label>
+                  <input class="form-control" type="number" name="maxTenor" #maxTenor="ngModel"
+                  [(ngModel)]="updateLoanData.maxTenor" placeholder="Maximum Tenor" required>
+                  <div *ngIf="maxTenor.invalid && (maxTenor.dirty || maxTenor.touched)" class="error">
+                    <div *ngIf="maxTenor.errors.required">Maximum Tenor is required</div>
+                  </div>
+                </div>
+              </div>
+
+
+
+              <div class="form-group row">
+                <div class="col">
+                  <label for="">Minimum Amount</label>
+                  <app-amount-input [(value)]="updateLoanData.minAmount"></app-amount-input>
+                </div>
+              </div>
+
+              <div class="form-group row">
+                <div class="col">
+                  <label for="">Maximum Amount</label>
+                  <app-amount-input [(value)]="updateLoanData.maxAmount"></app-amount-input>
+                </div>
+              </div>
+
+                <div class="form-group row">
+                  <div class="col">
+                    <label for="">Interest Type</label>
+                    <nb-select placeholder="Select Interest Type" name="interestType" #interestType="ngModel"
+                    [(ngModel)]="updateLoanData.interestType">
+                      <nb-option value="1">--Select Interest Rate--</nb-option>
+                      <nb-option *ngFor="let interest of allInterestRates" [value]="interest.id">{{interest.text}}</nb-option>
+                    </nb-select>
+                    <div *ngIf="interestType.invalid && (interestType.dirty || interestType.touched)" class="error">
+                      <div *ngIf="interestType.errors.required">Interest Type is required</div>
+                    </div>
+                  </div>
+              </div>
+
+              <div class="form-group row">
+                <div class="col">
+                  <label for="">Custom Question</label>
+                  <textarea name="customQuestion" #customQuestion="ngModel" [(ngModel)]="updateLoanData.customQuestion" cols="30" rows="10" style="width: 100%;"></textarea>
+                </div>
+
+              </div>
+
+              <div class="form-group row">
+                <div class="col">
+                  <label for="">Description</label>
+                  <textarea name="description" #description="ngModel" [(ngModel)]="updateLoanData.description" cols="30" rows="10" style="width: 100%;"></textarea>
+                </div>
+
+              </div>
+
+              <div class="form-group row">
+                 <div class="col-sm-6" style="display: flex; flex-direction: row; justify-content: space-between;">
+                  <button *ngIf="!loading" type="submit" class="btn my-button" (click)="createLoanType()" [disabled]="!loanType.valid" nbButton status="primary">Submit</button>
+                  <button *ngIf="loading" nbButton status="primary">Processing... &nbsp; <i class="fa fa-spin fa-spinner"></i></button>
+                  <span style="padding: 8px;"></span>
+                  <button type="submit" class="btn cancel-button" nbButton status="primary" outline>Cancel</button>
+                </div>
+              </div>
+
+              </form>
+            </nb-card-body>
+    </nb-card>
+  </div>
+</ngx-side-modal>
+
 
