--- a/src/app/modules/career-succession/new-competency/new-competency.component.html
+++ b/src/app/modules/career-succession/new-competency/new-competency.component.html
@@ -241,7 +241,9 @@
                     <label></label>
                   </div>
                   <div class="col-sm-8">
-                    <button nbButton status="primary" (click)="createCompetency()" [disabled]="myForm.invalid">Submit</button>
+                    <button nbButton *ngIf="!btnProcessing" status="primary" (click)="createCompetency()" [disabled]="allCompetencyRequirements.length < 1 || myForm.invalid">Submit</button>
+                    <button *ngIf="btnProcessing" nbButton status="primary">Processing... &nbsp; <i class="fa fa-spin fa-spinner"></i></button>
+
                   </div>
                 </div>
               </form>
