--- a/src/app/modules/disbursement/overall-budget/overall-budget.component.html
+++ b/src/app/modules/disbursement/overall-budget/overall-budget.component.html
@@ -372,39 +372,27 @@
   <ngx-side-modal [(show)]='editBudget' style="width: 500px;">
   <div modal-header>Update budget</div>
   <div class="row" modal-body>
-        <div class="form-group row">
+        <div class="form-group">
           <div class="col">
             <label>Start Date</label>
-            <ngx-date [(value)]="budget.financialYearStartDate" [max]='budget.financialYearEndDate'  style="width: 40%;"></ngx-date>
+            <ngx-date [(value)]="singleBudgetUpdate.financialYearStartDate" [max]='singleBudgetUpdate.financialYearEndDate'  style="width: 40%;"></ngx-date>
         </div>
         </div>
 
-      <div class="form-group row">
+      <div class="form-group">
       <div class="col">
         <label>End Date</label>
-        <ngx-date  [(value)]="budget.financialYearEndDate" [min]='budget.financialYearStartDate'  style="width: 40%;"></ngx-date>
+        <ngx-date  [(value)]="singleBudgetUpdate.financialYearEndDate" [min]='singleBudgetUpdate.financialYearStartDate'  style="width: 40%;"></ngx-date>
       </div>
       </div>
-<!--
-        <div style="display: flex;">
-          <div>
-            <label>Start Date</label>
-            <ngx-date [(value)]="budget.financialYearStartDate" [max]='budget.financialYearEndDate'  style="width: 40%;"></ngx-date>
-          </div>
-          <div style="margin-left: 20px; margin-right: 20px; font-size: 20px; text-align: center; justify-content: center; display: flex;"></div>
-          <div>
-            <label>End Date</label>
-            <ngx-date  [(value)]="budget.financialYearEndDate" [min]='budget.financialYearStartDate'  style="width: 40%;"></ngx-date>
-          </div>
-      </div> -->
 
-      <div class="form-group row">
+      <div class="form-group">
        <div class="col">
         <label>Total amount</label>
         <app-amount-input [(value)]="singleBudgetUpdate.totalBudgetAmount"></app-amount-input>
        </div>
       </div>
-      <div class="form-group row" style="margin-top: 20px">
+      <div class="form-group" >
        <div class="col">
         <button *ngIf="btnProcessing" nbButton status="primary" (click)="updateSingleBudget()">Update</button>
         <button *ngIf="btnProcessing" nbButton status="primary">Processing... &nbsp; <i class="fa fa-spin fa-spinner"></i></button>
