--- a/src/app/modules/loan/loan-request/loan-request.component.html
+++ b/src/app/modules/loan/loan-request/loan-request.component.html
@@ -133,7 +133,7 @@
                     <label for="">Maturity Date</label>
                   </div>
                   <div class="col-sm-6">
-                    <ngx-date [(value)]="loanModel.strMaturityDate"></ngx-date>
+                    <ngx-date [(value)]="loanModel.maturityDate"></ngx-date>
                   </div>
                 </div>
 
