--- a/src/app/modules/disciplinary-management/pages/create/create.component.html
+++ b/src/app/modules/disciplinary-management/pages/create/create.component.html
@@ -5,22 +5,7 @@
             <div class="container">
                 <form name="newDisciplineTemplateForm" id="newDisciplineTemplateForm" #newDisciplineTemplateForm="ngForm">
                     
-                                    <div class="form-group row">
-                                        <label class="col-sm-2">Recipient:</label>
-                                        <div class="col-sm-8">
-                                            <ngx-employee-master-search  (masterSubmitted)="getSelectedEmployee($event,'recipient');" [allowmultipleselection]="allowmultipleselection" [selectionHeader]="selectionHeader" [addbtnText]="addbtnText"></ngx-employee-master-search>
-                                        </div>
-                                    
-                                      
-                                    </div>
-                                    <div class="form-group row">
-                                        <label class="col-sm-2"> Cc:</label>
-                                        <div class="col-sm-8">
-                                            <ngx-employee-master-search  (masterSubmitted)="getSelectedEmployee($event,'cc');" [allowmultipleselection]="allowmultipleselection" [selectionHeader]="selectionHeader" [addbtnText]="addbtnText"></ngx-employee-master-search>
-                                        </div>
-                                    
-                                      
-                                    </div>
+                             
                                     <div class="form-group row">
                                         <label  class="col-sm-2">
                                             <span *ngIf="IsReward">Reward</span>
@@ -37,7 +22,10 @@
                                      
                                     </div>
                                     <div class="form-group row">
-                                        <label class="col-sm-2">Discipline Template</label>
+                                        <label class="col-sm-2">
+                                            <span *ngIf="IsReward">Reward</span>
+                                            <span *ngIf="!IsReward">Discipline</span>&nbsp;
+                                            Template</label>
                                         <div class="col-sm-8">
                                             <select fullWidth class="form-control" [(ngModel)]="DisciplineManagement.disciplinaryTemplateId" id="disciplinaryTemplateId" name="disciplinaryTemplateId" #disciplinaryTemplateId="ngModel" required>
                                                 <option>--Select Type--</option>
@@ -52,7 +40,7 @@
                                     <div class="form-group row">
                                         <label class="col-sm-2">Duration (Weeks)</label>
                                         <div class="col-sm-8">
-                                            <input fullWidth nbInput type="number" class="form-control" placeholder="Enter Duration in weeks" name="duration"
+                                            <input fullWidth nbInput type="number" [min]="0" class="form-control" placeholder="Enter Duration in weeks" name="duration"
                                             #duration="ngModel" [(ngModel)]="DisciplineManagement.duration" required>
                                           <div *ngIf="duration.invalid && (duration.dirty || duration.touched)" class="error">
                                             <div *ngIf="duration.errors.required">Default duration is required</div>
@@ -60,7 +48,7 @@
                                         </div>
                                     
                                     </div> 
-                       
+                          
                                 <div class="form-group row">
                                     <label class="col-sm-2">Attachment</label>
                                     <div class="col-sm-8">
@@ -68,11 +56,25 @@
                                     </div>
                                    
                                 </div>
-                                <div class="form-group">
-                                    <label class="col-sm-2"></label>
-                                    <div class="col-sm-8"> 
-                                        <div style="display: flex;flex-direction: row;">
-    
+                                <div class="form-group row">
+                                    <label class="col-sm-2">Recipient:</label>
+                                    <div class="col-sm-8">
+                                        <ngx-employee-master-search  (masterSubmitted)="getSelectedEmployee($event,'recipient');" [allowmultipleselection]="allowmultipleselection" [selectionHeader]="selectionHeader" [addbtnText]="addbtnText"></ngx-employee-master-search>
+                                    </div>
+                                
+                                  
+                                </div>
+                                <div class="form-group row">
+                                    <label class="col-sm-2"> Cc:</label>
+                                    <div class="col-sm-8">
+                                        <ngx-employee-master-search  (masterSubmitted)="getSelectedEmployee($event,'cc');" [allowmultipleselection]="allowmultipleselection" [selectionHeader]="selectionHeader" [addbtnText]="addbtnText"></ngx-employee-master-search>
+                                    </div>
+                                
+                                  
+                                </div>
+                                <div class="form-group">                               
+                                    <div class="offset-sm-2 col-sm-8"> 
+                                        <div style="display: flex;flex-direction: row;">    
                                             <ngx-loadable-button [loading]="loadingDiscipline" [disabled]="newDisciplineTemplateForm.invalid" (click)="createMgtLog()" >
                                                 Send
                                               </ngx-loadable-button> 
