--- a/src/app/modules/recruitment/admin-dashboard/jobs/jobs.component.html
+++ b/src/app/modules/recruitment/admin-dashboard/jobs/jobs.component.html
@@ -31,7 +31,6 @@
             </div>
 
             <div *ngIf="jobsCounter > 0">
-              <ngx-tableheader></ngx-tableheader>
               <ngx-tablecomponent [loading]='loading' [userData]='allJobs' [actions]='tableActions' [tableColum]="postedJobsTable" (actionClick)="tableActionClicked($event)"></ngx-tablecomponent>
             </div>
       </nb-tab>
@@ -43,8 +42,15 @@
             </div>
 
           <div *ngIf="scheduledCounter > 0">
-            <ngx-tableheader></ngx-tableheader>
-          <ngx-tablecomponent [tableColum]="scheduledJobsTable" [userData]="tableData" [showActions]="true" [actions]="tableActions" (actionClick)="tableActionClicked($event)"></ngx-tablecomponent>
+          <ngx-tablecomponent
+          [tableColum]="scheduledJobsTable"
+          (filterChange)="filterUpdated($event)"
+          [showActions]="false"
+          [showFilter]="true"
+          [userData]="tableData"
+          [showActions]="true"
+          [actions]="tableActions"
+          (actionClick)="tableActionClicked($event)"></ngx-tablecomponent>
           </div>
       </nb-tab>
 
@@ -56,7 +62,6 @@
               </div>
 
             <div *ngIf="draftCounter > 0">
-              <ngx-tableheader></ngx-tableheader>
              <ngx-tablecomponent [tableColum]="draftedJobsTable" [userData]="allDraftJobs" [actions]="draftTableActions" (actionClick)="draftTableActionClicked($event)"></ngx-tablecomponent>
             </div>
       </nb-tab>
@@ -386,7 +391,7 @@
         <form>
           <div class="form-group row mydiv">
             <label for="Title" >Job Title</label>
-            
+
               <select class="custom-select" name="jobTitle" #jobTitle="ngModel" [(ngModel)]="singleJob.jobTitleId" placeholder="Job Title">
               <option value="">--Select Job Title--</option>
               <option *ngFor="let job of allJobRoles" [value]="job.id">{{ job.name }}</option>
@@ -398,7 +403,7 @@
 
           <div class="form-group row ">
             <label for="Department" >Department</label>
-            
+
               <select class="custom-select" name="departmentName" #departmentName="ngModel" [(ngModel)]="singleJob.departmentId" required>
                 <option value="">--Select Department--</option>
                 <option *ngFor="let department of allDepartments" [value]="department.id">{{ department.name }}</option>
@@ -411,7 +416,7 @@
           <h6>Location</h6>
           <div class="form-group row mydiv">
             <label for="Country" >Country</label>
-            
+
               <select name="country" #country="ngModel" [(ngModel)]="singleJob.countryId" (change)="fetchStates($event.target.value)" class="custom-select" required>
                 <option value="">--Select country--</option>
                 <option *ngFor="let mycountry of allCountries" [value]="mycountry.id">{{mycountry.name}}</option>
@@ -444,7 +449,7 @@
 
           <div class="form-group row mydiv">
             <label for="Descripion" >Job Requirement</label>
-            
+
               <textarea name="requirements" #requirements="ngModel" [(ngModel)]="singleJob.requirements" cols="30" rows="10" style="width: 100%;"></textarea>
               <div *ngIf="requirements.invalid && (requirements.dirty || requirements.touched)" class="error">
                 <div *ngIf="requirements.errors.required">Job Requirement is required</div>
@@ -455,7 +460,7 @@
 
           <div class="form-group row mydiv">
             <label for="employmentType" >Employment Type</label>
-            
+
               <select class="custom-select" name="employmentType" #employmentType="ngModel" [(ngModel)]="singleJob.employmentTypeId" required>
                 <option value="">--Select Employment Type--</option>
                 <option *ngFor="let employ of employmentTypes" [value]="employ.id">{{employ.text}}</option>
@@ -467,7 +472,7 @@
 
           <div class="form-group row mydiv">
             <label for="availability" >Availability</label>
-            
+
               <select class="custom-select" name="availability" #availability="ngModel" [(ngModel)]="singleJob.jobAvailabilityId" required>
                 <option value="">--Select Availability--</option>
                 <option *ngFor="let avail of jobAvailability" [value]="avail.id">{{avail.text}}</option>
@@ -479,7 +484,7 @@
 
           <div class="form-group row mydiv">
             <label for="Region" >Experience</label>
-            
+
              <input type="number" class="form-control" name="experience" #experience="ngModel" [(ngModel)]="singleJob.experience" placeholder="Experience in months" required>
              <div *ngIf="experience.invalid && (experience.dirty || experience.touched)" class="error">
               <div *ngIf="experience.errors.required">Experience is required</div>
@@ -488,7 +493,7 @@
 
           <div class="form-group row mydiv">
             <label >Minimum Qualification</label>
-            
+
               <select type="text" class="form-control" name="minQualification" #minQualification="ngModel" [(ngModel)]="singleJob.minQualificationId" placeholder="Minimum Education">
               <option value="">--Select Qualification--</option>
               <option *ngFor="let qualification of qualificationData" [value]="qualification.categoryId">{{qualification.name}}</option>
@@ -500,7 +505,7 @@
 
           <div class="form-group row mydiv">
             <label >Maximum Qualification</label>
-            
+
             <select type="text" class="form-control" name="maxQualification" #maxQualification="ngModel" [(ngModel)]="singleJob.maxQualificationId" placeholder="Maximum Education">
               <option value="">--Select Qualification--</option>
               <option *ngFor="let qualification of qualificationData" [value]="qualification.categoryId">{{qualification.name}}</option>
@@ -515,7 +520,7 @@
           <div class="form-group row mydiv">
             <label for="Country" >Currency <span
                 style="font-size: 16px; color: #95A8B8;">(optional)</span></label>
-            
+
               <select class="custom-select"  name="jobCurrency" #jobCurrency="ngModel" [(ngModel)]="singleJob.currency" required>
                 <option value="">Select </option>
                 <option *ngFor="let currency of allCurrencies" [value]="currency.code">{{ currency.name }}</option>
@@ -526,9 +531,9 @@
           </div>
 
           <div class="form-group row mydiv">
-            <label for="currency" >Min Salary<span style="font-size: 16px; color: #95A8B8;">(optional)</span></label>         
+            <label for="currency" >Min Salary<span style="font-size: 16px; color: #95A8B8;">(optional)</span></label>
               <app-amount-input class="form-control" [(value)]="singleJob.minSalary"></app-amount-input>
-       
+
           </div>
 
           <div class="form-group row mydiv">
@@ -540,9 +545,9 @@
 
           <div class="form-group row mydiv">
             <label>Post Validity</label>
-            
+
               <ngx-date-range [(start)]="singleJob.postValidityFrom" [(end)]="singleJob.postValidityTo" required></ngx-date-range>
-            
+
           </div>
 
           <div class="form-group row">
@@ -556,22 +561,22 @@
           <div class="form-group row mydiv">
             <label for="Country" >Scorecard <span
                 style="font-size: 16px; color: #95A8B8;">(optional)</span></label>
-            
+
               <select class="custom-select" name="scorecard" ngModel="scorecard" [(ngModel)]="singleJob.scoreCardId" required>
                 <option value="">Select </option>
                 <option *ngFor="let card of allScoreCards" [value]="card.id">{{ card.focusArea }}</option>
               </select>
-          
+
           </div>
 
           <div class="form-group row mydiv">
             <label for="Country" >Quiz <span style="font-size: 16px; color: #95A8B8;">(optional)</span></label>
-            
+
               <select class="custom-select" required>
                 <option type="button" class="select-button">Select Quiz</option>
                 <option *ngFor="let quiz of allQuizes" type="button" class="select-button" [value]="quiz.id">{{ quiz.name }}</option>
               </select>
-         
+
           </div>
 
           <div class="form-group row">
