--- a/src/app/modules/disciplinary-management/pages/disciplinary-management-log/disciplinary-management-log.component.html
+++ b/src/app/modules/disciplinary-management/pages/disciplinary-management-log/disciplinary-management-log.component.html
@@ -16,7 +16,7 @@
   <ngx-tablecomponent  
   *ngIf="!showEmpty"
   (filterChange)="filterUpdated($event)"
-  [showActions]="true"
+  [showActions]="false"
   [showFilter]="true"
   [actions]="tableActions" 
   [userData]="DisciplineManagementList" 
