--- a/src/app/modules/requests-and-complaints/complaint-detail/complaint-detail.component.html
+++ b/src/app/modules/requests-and-complaints/complaint-detail/complaint-detail.component.html
@@ -3,7 +3,7 @@
     <div class="col-sm-4">
       <div style="display: flex">
         <img
-          [src]="selectedComplaint.complainerImageSrc"
+          src="assets/icons/camera.jpg"
           style="height: 50px; width: 50px; border-radius: 50%"
         />
         <div style="padding-left: 10px">
