--- a/src/app/modules/requests-and-complaints/main/main.component.html
+++ b/src/app/modules/requests-and-complaints/main/main.component.html
@@ -15,7 +15,8 @@
     <div class="row" style="height: 70vh;">
         <div class="col-sm-3" style="border-right: 1px solid #CCCCCC;    padding-right: 0px; height: 100%;">
             <div class="section-header">
-                <span *ngIf="selectedTab === TABS.REQUEST">All requests</span> <span *ngIf="selectedTab === TABS.COMPLAINT">All complaints</span> <span style="background: rgba(72, 71, 224, 0.08); border-radius: 8px; padding: 6px 12px; margin-left: 20px; color: #4847E0;">{{complaints.length}}</span>
+                <span *ngIf="selectedTab === TABS.REQUEST">All requests</span> 
+                <span *ngIf="selectedTab === TABS.COMPLAINT">All complaints</span> <span style="background: rgba(72, 71, 224, 0.08); border-radius: 8px; padding: 6px 12px; margin-left: 20px; color: #4847E0;">{{complaints.length}}</span>
             </div>
             <div class="complain-items" style="overflow: scroll; height: calc(100% - 80px);" nbInfiniteList [threshold]="3000" (bottomThreshold)="loadNext()">
                 <div *ngIf="loading" style="width: 100%; height: 100%; display: flex; justify-content: center; align-items: center;">
@@ -25,17 +26,44 @@
                 </div>
                 <ng-template [ngIf]="!loading">
                     <div class="complain-item" *ngFor="let complaint of complaints" [class]="{active: selectedComplaint === complaint}" (click)="changeSelectedComplaint(complaint)">
-                        <img [src]="complaint.complainerImageSrc" style="height: 50px; width: 50px; border-radius: 50%;">
-                        <div class="complaint-detail-section">
-                            <span class="complainer-name">{{complaint.complainerName}}</span>
-                            <div class="complaint-title">{{complaint.title | maxStringLength:30}}</div>
-                            <!-- <div class="complaint-detail">{{complaint.description | maxStringLength:50}}</div> -->
-                            <ngx-status [data]="complaint"></ngx-status>
-                        </div>
-                        <div style="flex-direction: column; display: flex; align-items: flex-end;">
-                            {{complaint.time | datePipes}}
-                            <div style="height: 0.5rem; width: 0.5rem; border-radius: 50%; margin-top: 1rem;" class="bg-primary"></div>
-                        </div>
+                     <div style="display: flex;flex-direction: column;">
+                        <div style="display: flex;flex-direction: row;">
+                            <div style="display: flex;padding-left: 5px;padding-right:5px">
+                                <img src="assets/icons/camera.jpg" style="height: 50px; width: 50px; border-radius: 50%;">
+                            </div>
+                            
+                            <div style="display: flex;padding-left: 5px;padding-right:5px">
+                                <div style="display: flex; flex-direction: column;">
+                                    <div class="complaint-detail-section" style="flex: auto;">
+                                        <span class="complainer-name">{{complaint.complainerName}}</span>
+                                        <div class="complaint-title">{{complaint.title | maxStringLength:30}}</div>
+                                        <!-- <div class="complaint-detail">{{complaint.description | maxStringLength:50}}</div> -->
+                                        
+                                    </div>
+                                    <div style="margin-top: 10px;">
+                                        <ngx-status [data]="complaint"></ngx-status>
+                                    </div>
+                                </div>
+                               
+                            </div>
+                            <div style="display: flex;padding-left: 5px;padding-right:5px">
+                                <div style="display: flex; flex-direction: column;">
+                                    <div style="align-items: flex-end;flex: auto;">
+                                        {{complaint.time | datePipes}}
+                                       
+                                    </div>
+                                    <div style="display:flex;align-items: center;justify-content: flex-end; padding: 5px;">
+                                        <div style="height: 0.5rem; width: 0.5rem; border-radius: 50%; margin-top: 1rem;" class="bg-primary"></div>
+                                    </div>
+                                </div>
+                             
+                            </div>
+                      
+                          </div>
+                           
+
+                     </div>
+                      
                     </div>
                 </ng-template>
                 <div *ngIf="loadingNext" style="display: flex; justify-content: center; padding-top: 5px;">
@@ -79,7 +107,7 @@
             </div>
         </div>
         <div class="form-group">
-            <label>Receipent</label>
+            <label>Recipient</label>
             <div>
                 <ngx-employee-master-search [(value)]="newComplaint.employeeId"></ngx-employee-master-search>
                 <div *ngIf="errors.employeeId">
@@ -92,7 +120,9 @@
         <div class="form-group">
             <label>Description</label>
             <div>
-                <ngx-wysisyg-input [(value)]="newComplaint.description"></ngx-wysisyg-input>
+                <textarea rows="5"
+                nbInput fullWidth  [(ngModel)]="newComplaint.description" name="description" id="description" #description="ngModel"></textarea>
+              
                 <div *ngIf="errors.description">
                     <div *ngFor="let error of errors.description" class="error">
                         {{error}}
